--- a/Aeroporto/package.json
+++ b/Aeroporto/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "db_aeroporto",
+  "name": "aeroporto",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
   "keywords": [],
@@ -15,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "nodemon": "^3.1.10"
   }
